k8s/02-tempo.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: observability
spec:
  selector:
    app: tempo
  ports:
    - name: http
      protocol: TCP
      port: 3200
      targetPort: 3200
    - name: otlp-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          image: grafana/tempo:2.10.1
          args:
            - "-config.file=/etc/tempo/tempo.yaml"
          ports:
            - containerPort: 3200
            - containerPort: 4317
          volumeMounts:
            - name: config-volume
              mountPath: /etc/tempo
      volumes:
        - name: config-volume
          configMap:
            name: tempo-config
