k8s/03-mimir.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: mimir
  namespace: observability
spec:
  selector:
    app: mimir
  ports:
    - name: http
      protocol: TCP
      port: 9009
      targetPort: 9009
---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mimir
  template:
    metadata:
      labels:
        app: mimir
    spec:
      containers:
        - name: mimir
          image: grafana/mimir:2.11.0
          args:
            - "-config.file=/etc/mimir/mimir.yaml"
          ports:
            - containerPort: 9009
          volumeMounts:
            - name: config-volume
              mountPath: /etc/mimir
      volumes:
        - name: config-volume
          configMap:
            name: mimir-config
