k8s/08-alloy.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: observability
spec:
  selector:
    app: alloy
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alloy
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      containers:
        - name: alloy
          image: grafana/alloy:v1.0.0
          args:
            - "run"
            - "/etc/alloy/config.river"
            - "--server.http.listen-addr=0.0.0.0:12345"
          ports:
            - containerPort: 4317
            - containerPort: 4318
          volumeMounts:
            - name: config-volume
              mountPath: /etc/alloy
      volumes:
        - name: config-volume
          configMap:
            name: alloy-config
