k8s/09-petclinic.yaml
#Service
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: observability
spec:
  selector:
    app: petclinic
  ports:
    - port: 8080
      targetPort: 8080
---
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: petclinic
          image: akozma056/petclinic-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
